# CPU_Rasterizer

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
resource/textures/: colMap.bytes  daveTex.bytes  uvGrid.bytes
src/: main.cpp
src/application/: application.cpp  application.hpp
src/core_engine/: main.cpp
src/core_engine/application/: application.cpp  application.hpp
src/core_engine/helper/: math.hpp  obj_loader.cpp  obj_loader.hpp  simd_math.hpp
src/core_engine/rasterizer/: model.cpp  model.hpp  rasterizer_engine.cpp  rasterizer_engine.hpp  types.hpp  types_math.hpp
src/core_engine/shader/: shader.hpp
src/demos/: demos_app.cpp  demos_app.hpp  demos_main.cpp  terrain_gen.cpp  terrain_gen.hpp
src/helper/: image_view.hpp  math.hpp  obj_loader.cpp  obj_loader.hpp  renderer.cpp  renderer.hpp  types.hpp
src/rasterizer/: math.hpp  model.cpp  model.hpp  rasterizer_engine.cpp  rasterizer_engine.hpp  types.hpp  types_math.hpp
src/shader/: shader.hpp
